Initial release for Cosmic
The next Ubuntu version will probably pick up GHDL from Debian, so build
this package as "ghdl-gekkio" and conflict with the Debian package
names.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ run-bind.adb
 run-bind.ads
 src/version.ads
 doc/_build/
+
+debian/.debhelper
+debian/*-stamp
+debian/*.substvars
+debian/files
+debian/ghdl-gekkio/
+debian/ghdl-gekkio*.debhelper.log
+debian/tmp/
